mobile signup button visibility issue fixed

--- a/frontend/public/css/login.css
+++ b/frontend/public/css/login.css
@@ -56,7 +56,6 @@ header{
     font-size: 30px;
     display: flex;
     justify-content: center;
-    padding: 10px 0 10px 0;
 }
 
 .input-field .input{
@@ -122,7 +121,7 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.8rem;
+    gap: 0.5rem;
     color: #fff;
     font-size: 14px;
     margin-top: 10px;
@@ -138,7 +137,6 @@ label a{
     width: 20px;
 }
 .alternates{
-    margin-top: 1rem;
     display: flex;
     
     align-items: center;
